tests/paczka2/big_fuzzy/42722831.err
Error in line 2: GlkI A248 14,0
Error in line 9: GlkI A248 8,3
Error in line 11: A693 A378 53,9
Error in line 15: A693 A248 23,8
Error in line 13: GlkI A693 73,7
Error in line 38: SCpKzH63vbp A693 85,50
Error in line 51: EKJWZura2C A782 83,4
Error in line 36: v2L5qzhNo A248 74,4
Error in line 53: EKJWZura2C A248 21,0
Error in line 67: v2L5qzhNo A693 4,8
Error in line 74: n7Y0wpqkB4 A248 43,7
Error in line 75: n7Y0wpqkB4 A378 40,7
Error in line 61: GlkI A693 66,2
Error in line 83: 7yqMEqbgj A693 341,86
Error in line 80: 7yqMEqbgj A693 82,5
Error in line 91: v2L5qzhNo A693 8x,2
Error in line 95: EKJWZura2C A782 29,2
Error in line 96: EKJWZura2C A378 72,6
Error in line 108: EKJWZura2C A248 76,6
Error in line 119: EKJWZura2C A248 64,6
Error in line 132: n7Y0wpqkB4 378 18,8
Error in line 121: v2L5qzhNo A782 55,3
Error in line 137: n7Y0wpqkB4 A378 82,8
Error in line 141: n7Y0wpqkB4 A782 91,9
Error in line 155: GlkI A378 95,8
Error in line 173: A693 A378 45,42
Error in line 176: v2L5qzhNo A378 84,9
Error in line 174: A693 A378 173,1
Error in line 190: n7Y0wpkB4 A248 3,9
Error in line 183: v2L5qzhNo A693 76,3
Error in line 200: 7yqMEqbgj A248 15,3
Error in line 201: 7yqMEqbgj A693 20,8
Error in line 166: SCpKzH63vbp A248 41,8
Error in line 206: A693 A693 15,3
Error in line 186: GlkI A782 208,7
Error in line 221: EKJWZura2C A782 50,6
Error in line 233: SCpKzH63vbp A693 40,3
Error in line 235: SCpKzH63vbp A248 9,3
Error in line 240: EKJWZura2C A378 23,4
Error in line 239: SCpKzH63vbp A693 96,4
